Changed the implementation of the clusters from a list to a hashmap for easier searching